--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: Undefault
+title: Tech Notes Blog
 description: Description will crystallize after several entries :)
